--- a/AP.config
+++ b/AP.config
@@ -47,3 +47,5 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
 CONFIG_PACKAGE_luci-app-wifischedule=y
+
+CONFIG_PACKAGE_luci-theme-infinityfreedom=y
