--- a/Lite.config
+++ b/Lite.config
@@ -35,7 +35,7 @@ CONFIG_PACKAGE_kmod-usb-net-sr9700=y
 CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-wdm=y
 
-CONFIG_PACKAGE_luci-app-dawn=y
+#CONFIG_PACKAGE_luci-app-dawn=y
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-easymesh=y
