--- a/Lite.config
+++ b/Lite.config
@@ -67,5 +67,6 @@ CONFIG_PACKAGE_luci-app-uhttpd=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-wifischedule=y
 CONFIG_PACKAGE_luci-app-wireguard=y
+CONFIG_PACKAGE_luci-app-vlmcsd=y
 
 CONFIG_PACKAGE_luci-theme-infinityfreedom=y
