--- a/OpenWrt.config
+++ b/OpenWrt.config
@@ -1,4 +1,4 @@
-#openwrt官方源码配置文件，集成多个路由器机型。
+#openwrt官方源码配置文件，集成多个路由器机型,插件就集成这么几个，其他的可从固件中的软件库随意安装。
 #固定格式机型
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
