--- a/OpenWrt.config
+++ b/OpenWrt.config
@@ -21,6 +21,9 @@ CONFIG_TARGET_DEVICE_PACKAGES_ramips_mt7621_DEVICE_xiaomi_mi-router-ac2100=""
 CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=y
 CONFIG_TARGET_DEVICE_PACKAGES_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=""
 
+
+# CONFIG_ALL_NONSHARED is not set
+# CONFIG_ALL_KMODS is not set
 CONFIG_DEVEL=y
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 CONFIG_AUTOREMOVE=y
