--- a/OpenWrt.config
+++ b/OpenWrt.config
@@ -2,8 +2,6 @@
 #固定格式机型
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
-CONFIG_TARGET_MULTI_PROFILE=y
-
 #语言
 CONFIG_LUCI_LANG_en=y
 CONFIG_LUCI_LANG_zh_Hans=y
@@ -22,8 +20,8 @@ CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=y
 CONFIG_TARGET_DEVICE_PACKAGES_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=""
 
 
-# CONFIG_ALL_NONSHARED is not set
-# CONFIG_ALL_KMODS is not set
+CONFIG_ALL_KMODS=y
+CONFIG_ALL_NONSHARED=y
 CONFIG_DEVEL=y
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 CONFIG_AUTOREMOVE=y
