--- a/OpenWrt.config
+++ b/OpenWrt.config
@@ -20,16 +20,6 @@ CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=y
 CONFIG_TARGET_DEVICE_PACKAGES_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=""
 
 CONFIG_DEVEL=y
-CONFIG_TARGET_PER_DEVICE_ROOTFS=y
-CONFIG_AUTOREMOVE=y
-CONFIG_BUILDBOT=y
-CONFIG_COLLECT_KERNEL_DEBUG=y
-CONFIG_IB=y
-CONFIG_IMAGEOPT=y
-CONFIG_JSON_OVERVIEW_IMAGE_INFO=y
-CONFIG_KERNEL_BUILD_DOMAIN="buildhost"
-CONFIG_KERNEL_BUILD_USER="builder"
-# CONFIG_KERNEL_KALLSYMS is not set
 
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_libiwinfo-lua=y
@@ -160,3 +150,5 @@ CONFIG_VERSION_NUMBER=""
 CONFIG_VERSION_PRODUCT=""
 CONFIG_VERSION_REPO=""
 CONFIG_VERSION_SUPPORT_URL=""
+# CONFIG_VERSION_CODE_FILENAMES is not set
+# CONFIG_VERSION_FILENAMES is not set
