--- a/OpenWrt.config
+++ b/OpenWrt.config
@@ -4,13 +4,13 @@ CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 
 #newifi-d2
-CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
+#CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
 #k2p
 CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p=y
 #xiaomimi-ac2100
-CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mi-router-ac2100=y
+#CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mi-router-ac2100=y
 #redi-ac2100
-CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=y
+#CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=y
 #语言
 CONFIG_LUCI_LANG_en=y
 CONFIG_LUCI_LANG_zh_Hans=y
