--- a/LEDE-K2p.config
+++ b/LEDE-K2p.config
@@ -74,4 +74,4 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-wifischedule=y
 
-CONFIG_PACKAGE_luci-theme-infinityfreedom=y
+#CONFIG_PACKAGE_luci-theme-infinityfreedom=y
