--- a/LEDE-Newifi3-d2.config
+++ b/LEDE-Newifi3-d2.config
@@ -83,4 +83,4 @@ CONFIG_PACKAGE_luci-app-zerotier=y
 # CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
 CONFIG_PACKAGE_luci-app-wifischedule=y
 #主题
-CONFIG_PACKAGE_luci-theme-infinityfreedom=y
+#CONFIG_PACKAGE_luci-theme-infinityfreedom=y
