--- a/LEDE-R7800-Lite.config
+++ b/LEDE-R7800-Lite.config
@@ -39,6 +39,10 @@ CONFIG_PACKAGE_kmod-usb-net-sr9700=y
 CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-wdm=y
 
+CONFIG_PACKAGE_luci-app-diskman=y
+CONFIG_PACKAGE_luci-app-hd-idle=y
+
+CONFIG_PACKAGE_luci-app-filetransfer=y
 
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-dnsfilter=y
