--- a/LEDE-Newifi3-d2.config
+++ b/LEDE-Newifi3-d2.config
@@ -52,7 +52,7 @@ CONFIG_PACKAGE_luci-app-ntpc=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-openclash=y
+# CONFIG_PACKAGE_luci-app-openclash is not set
 #CONFIG_PACKAGE_luci-app-dawn=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
@@ -73,6 +73,11 @@ CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 #IPTV组播
 CONFIG_PACKAGE_luci-app-udpxy=y
+
+CONFIG_PACKAGE_luci-app-diskman=y
+CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-app-filetransfer=y
+
 
 CONFIG_PACKAGE_luci-app-qos=y
 CONFIG_PACKAGE_luci-app-smartdns=y
