--- a/LEDE-K2p.config
+++ b/LEDE-K2p.config
@@ -40,6 +40,8 @@ CONFIG_PACKAGE_luci-app-qos=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_luci-app-sqm is not set
 
+CONFIG_PACKAGE_luci-app-ddns=y
+
 CONFIG_PACKAGE_luci-app-dnsfilter=y
 #passwall
 # CONFIG_PACKAGE_luci-app-passwall is not set
