--- a/LEDE-R7800-AP.config
+++ b/LEDE-R7800-AP.config
@@ -40,6 +40,8 @@ CONFIG_PACKAGE_kmod-usb-wdm=y
 
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-app-fileassistant=y
+CONFIG_PACKAGE_luci-app-filebrowser=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 
 CONFIG_PACKAGE_luci-app-dnsfilter=y
