--- a/.github/workflows/linksys_e8450.yml
+++ b/.github/workflows/linksys_e8450.yml
@@ -20,7 +20,7 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/lede-project/source
+  REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: linksys_e8450.config
