--- a/linksys_e8450.config
+++ b/linksys_e8450.config
@@ -1,6 +1,7 @@
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_mt7622=y
 CONFIG_TARGET_mediatek_mt7622_DEVICE_linksys_e8450=y
+#CONFIG_TARGET_mediatek_mt7622_DEVICE_linksys_e8450-ubi=y
 
 #语言
 CONFIG_LUCI_LANG_en=y
