--- a/linksys_e8450.config
+++ b/linksys_e8450.config
@@ -78,6 +78,9 @@ CONFIG_PACKAGE_kmod-usb-xhci-hcd=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
 
+CONFIG_PACKAGE_kmod-fs-antfs=y
+CONFIG_PACKAGE_kmod-fs-ntfs=y
+CONFIG_PACKAGE_antfs-mount=y
 
 #插件区
 CONFIG_PACKAGE_luci-app-firewall=y
