--- a/linksys_e8450.config
+++ b/linksys_e8450.config
@@ -78,9 +78,15 @@ CONFIG_PACKAGE_kmod-usb-xhci-hcd=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
 
-CONFIG_PACKAGE_kmod-fs-antfs=y
-CONFIG_PACKAGE_kmod-fs-ntfs=y
+#挂在硬盘格式
 CONFIG_PACKAGE_antfs-mount=y
+CONFIG_PACKAGE_kmod-fs-antfs=y
+CONFIG_PACKAGE_kmod-fs-exfat=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-ntfs=y
+CONFIG_PACKAGE_kmod-fs-vfat=y
+
+
 
 #插件区
 CONFIG_PACKAGE_luci-app-firewall=y
