--- a/OpenWrt.config
+++ b/OpenWrt.config
@@ -110,6 +110,13 @@ CONFIG_PACKAGE_kmod-usb2-pci=y
 CONFIG_PACKAGE_kmod-usb3=y
 
 #挂在硬盘格式
+
+CONFIG_PACKAGE_block-mount=y
+
+CONFIG_PACKAGE_libmount=y
+
+CONFIG_BUSYBOX_CONFIG_MOUNT=y
+
 CONFIG_PACKAGE_autoshare-samba=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_antfs-mount=y
