--- a/linksys_e8450.config
+++ b/linksys_e8450.config
@@ -64,6 +64,10 @@ CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libopenssl-conf=y
 CONFIG_PACKAGE_openssl-util=y
 
+CONFIG_LIBMBEDTLS_HAVE_ARMV8CE_AES=y
+CONFIG_PACKAGE_libmbedtls=y
+
+
 
 #usb
 CONFIG_PACKAGE_kmod-usb-core=y
