--- a/LEDE-R7800-Lite.config
+++ b/LEDE-R7800-Lite.config
@@ -5,6 +5,15 @@ CONFIG_TARGET_ipq806x_generic_DEVICE_netgear_r7800=y
 CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
+CONFIG_LIBCURL_COOKIES=y	
+CONFIG_LIBCURL_FILE=y	
+CONFIG_LIBCURL_FTP=y	
+CONFIG_LIBCURL_HTTP=y	
+CONFIG_LIBCURL_NO_SMB="!"	
+CONFIG_LIBCURL_OPENSSL=y	
+CONFIG_LIBCURL_PROXY=y	
+CONFIG_LIBMBEDTLS_HAVE_ARMV8CE_AES=y	
+CONFIG_LIBSODIUM_MINIMAL=y
 
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
