--- a/OpenWrt.config
+++ b/OpenWrt.config
@@ -28,7 +28,15 @@ CONFIG_TARGET_ipq806x_generic_DEVICE_netgear_xr500=y
 #CONFIG_TARGET_ipq806x_generic_DEVICE_tplink_c2600=y
 #CONFIG_TARGET_ipq806x_generic_DEVICE_tplink_vr2600v=y
 
-
+CONFIG_LIBCURL_COOKIES=y	
+CONFIG_LIBCURL_FILE=y	
+CONFIG_LIBCURL_FTP=y	
+CONFIG_LIBCURL_HTTP=y	
+CONFIG_LIBCURL_NO_SMB="!"	
+CONFIG_LIBCURL_OPENSSL=y	
+CONFIG_LIBCURL_PROXY=y	
+CONFIG_LIBMBEDTLS_HAVE_ARMV8CE_AES=y	
+CONFIG_LIBSODIUM_MINIMAL=y
 
 
 #语言
