--- a/LEDE-R7800-5.15Test.config
+++ b/LEDE-R7800-5.15Test.config
@@ -43,7 +43,7 @@ CONFIG_PACKAGE_automount=y
 
 
 CONFIG_DEFAULT_kmod-fs-vfat=y
-CONFIG_PACKAGE_kmod-fs-afs is not set
+# CONFIG_PACKAGE_kmod-fs-afs is not set
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-fs-ntfs3-oot=y
