--- a/LEDE-K2p.config
+++ b/LEDE-K2p.config
@@ -15,7 +15,7 @@ CONFIG_LIBCURL_PROXY=y
 
 CONFIG_PACKAGE_hostapd-common=y
 
-CONFIG_TESTING_KERNEL=y
+#CONFIG_TESTING_KERNEL=y
 
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 # CONFIG_PACKAGE_nlbwmon is not set
