--- a/.github/workflows/Redmi-AX6-Lede.yml
+++ b/.github/workflows/Redmi-AX6-Lede.yml
@@ -22,8 +22,7 @@ jobs:
       #默认主题
       OWRT_THEME: bootstrap
       #默认主机名
-      OWRT_NAME: CMCC-RAX3000M
-      #OWRT_NAME: Xiaomi-AX3600
+      OWRT_NAME: CMCC
       #默认密码，仅作展示，更改无效
       OWRT_PW: password
       #默认地址
